Adding unsubscribe-like link to all emails sent through the app

--- a/app/views/layouts/player_mailer.html.erb
+++ b/app/views/layouts/player_mailer.html.erb
@@ -9,5 +9,9 @@
       Thanks,<br />
       Avantica Green
     </p>
+    <p style="text-align: center">
+      Don't want to receive more emails like this? Change your
+      <%= link_to "notification settings", edit_player_path(@recipient, options_for_mail_link) %>.
+    </p>
   </body>
 </html>
